--- a/styles.css
+++ b/styles.css
@@ -1,38 +1,55 @@
-@font-face {
-  font-family: "Gotham Book";
-  src: url("GothamBook.otf");
-}
-
 * {
   color: white;
   font-family: "Gotham Book";
 }
 
-.background {
-  background-color: rgb(0, 0, 0, 0.5);
-  border-radius: 15px;
-  margin: 15px 15px;
-  padding: 15px;
+a {
+  color: rgb(0, 112, 224);
 }
 
-a {
-  color: rgb(255, 255, 255);
+.background {
+  max-width: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  border-radius: 15px;
+  margin: 15px;
+  padding: 15px;
 }
 
 body {
   background-color: rgb(18, 23, 51, 1);
 }
 
-.container {
+.center {
+  height: 100%;
+  max-width: 95%;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   align-items: center;
+}
+
+.container {
   display: flex;
   justify-content: center;
+  align-items: center;
+}
+
+html, body {
+  height: 100%;
+  margin: 0;
+  text-align: center;
+}
+
+@font-face {
+  font-family: "Gotham Book";
+  src: url("GothamBook.otf");
 }
 
 textarea {
-  resize:none;
+  resize: none;
   border: 1px solid white;
-  background-color:rgba(0,0,0,0.25);
+  background-color: rgba(0, 0, 0, 0.25);
   border-radius: 10px;
   font-size: 20pt;
   margin: 5px 0px;
